--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-amethyst = {git = "https://github.com/amethyst/amethyst", features = ["no-slow-safety-checks"]}
+amethyst = {version = "0.15.3", features = ["no-slow-safety-checks"]}
 log = {version = "0.4.8", features = ["serde"]}
 serde = {version = "1.0.104", features = ["derive"]}
 
