change material-albedo on hover

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "rust-analyzer.updates.askBeforeDownload": false
+  "rust-analyzer.updates.askBeforeDownload": false,
+  "editor.formatOnType": true,
 }
